--- a/package.json
+++ b/package.json
@@ -61,7 +61,10 @@
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-electron": "^1.0.0"
+    "vuex-electron": "^1.0.0",
+    "xml-js": "^1.6.8",
+    "vue-i18n": "^8.1.0",
+    "jszip": "^3.1.5"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
