--- a/package.json
+++ b/package.json
@@ -56,15 +56,16 @@
     }
   },
   "dependencies": {
-    "vue": "^2.5.16",
+    "@vue/cli": "^3.5.0",
     "axios": "^0.18.0",
+    "jszip": "^3.1.5",
+    "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
+    "vue-i18n": "^8.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-electron": "^1.0.0",
-    "xml-js": "^1.6.8",
-    "vue-i18n": "^8.1.0",
-    "jszip": "^3.1.5"
+    "xml-js": "^1.6.8"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
