--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@vue/cli": "^3.5.0",
     "axios": "^0.18.0",
+    "iohook": "^0.4.0",
     "jszip": "^3.1.5",
     "mime": "^2.4.0",
     "vue": "^2.5.16",
